[tool.poetry]
name = "enjoying-ds"
version = "0.1.0"
description = "Just trying in ds"
authors = ["Sapientus <zeinabkhalilova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
